# ControlCommandFrameworkProject

./: .gitignore  CMakeLists.txt  README.md
include/: common.h
include/math/: matrix.h
src/: main.c
src/math/: integrator.c  matrix.c
src/tests/: test.c  test.h  test_matrix.c  test_matrix.h
tests/: test.c  test.h  test_matrix.c  test_matrix.h
